--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "downloadjs": "^1.4.7",
     "katex": "^0.16.4",
     "mathquill": "^0.10.1-a",
     "react": "^18.2.0",
