--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-floating-action-button": "^1.0.5",
+    "react-icons": "^4.8.0",
     "react-mathquill": "^1.0.3",
+    "react-modal": "^3.16.1",
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
