--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "react-virtual-keyboard": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
